@@ -20,4 +20,6 @@ and denominator of a rational number type as \ccc{Quotient}, \ccc{Gmpq},
 
 \ccMethod{NT make_rational(const RT & n, const RT & d) const;}{constructs a rational number.}
 
+\ccMethod{NT make_rational(const NT & n, const NT & d) const;}{constructs a rational number.}
+
 \end{ccRefClass}
